packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/method_not_found7.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "getPrintableStackTrace" 22 0x00 ())
(( 1 0x00 ())
(error 5 0x00 ())
(ident, "s" 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(handle 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""io.ballerina.runtime.api.values.BError"" 40 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "concat" 6 0x00 ())
(( 1 0x00 ())
(string 6 0x00 ())
(ident, "s1" 2 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
(ident, "s2" 2 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(handle 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""io.ballerina.runtime.api.values.BString"" 41 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "concatString" 12 0x00 ())
(( 1 0x00 ())
(handle 6 0x00 ())
(ident, "h" 1 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
(ident, "s1" 2 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
(ident, "s2" 2 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(handle 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""io.ballerina.runtime.api.values.BString"" 41 0x00 ())
(, 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""concat"" 8 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "indexOf" 7 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(byte 4 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""java.lang.String"" 18 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
